Stop hiding overflow on mobile

--- a/style.css
+++ b/style.css
@@ -62,7 +62,6 @@ a {
     }
 
     body {
-        overflow-x: hidden;
         display: flex;
         flex-direction: column;
         align-items: center;
